# MonoNativeHook

./: CMakeLists.txt  hook.cpp  utils.cpp
include/hook/: hook.h
include/mono/metadata/: image.h  metadata.h  object.h  profiler.h
include/utils/: logger.h  uilts.h
